<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <ImageView
        android:id="@+id/file_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/baseline_folder_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/file_info"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/file_folder_icon"
        />

    <LinearLayout
        android:id="@+id/file_info"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/file_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/arrow"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        >
        <TextView
            android:id="@+id/file_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filename"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="2dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/items_count"
                android:textSize="14sp" />
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                app:dividerColor="?attr/colorAccent" />
            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>
    <ImageView
        android:id="@+id/arrow"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/baseline_keyboard_arrow_right_24"
        android:contentDescription="@string/open"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/file_info"
        />

</androidx.constraintlayout.widget.ConstraintLayout>